I added dependencies between trainingDao and ExerciseDao but they didn't work

--- a/app/src/main/res/layout/fragment_create_training.xml
+++ b/app/src/main/res/layout/fragment_create_training.xml
@@ -9,13 +9,14 @@
         android:id="@+id/toolbar_create_training"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="#995FA1A8"
+        android:background="@color/crimson"
         android:drawableTint="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:navigationIcon="@drawable/ic_bac"
+
         app:title="Add new training"
         app:titleTextColor="@color/white">
 
@@ -56,8 +57,8 @@
         android:hint="Optional"
         android:maxHeight="100dp"
         android:padding="16dp"
-        android:textColor="@color/white"
-        android:textColorHint="@color/white"
+        android:textColor="@color/black"
+        android:textColorHint="@color/black"
         app:layout_constraintBottom_toTopOf="@id/confirm_create_training"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
@@ -84,17 +85,8 @@
         android:id="@+id/etWeight_create_training"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="12dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginBottom="5dp"
-        android:background="@drawable/background_edit_text"
-        android:elevation="4dp"
+        style="@style/EditWeightStyle"
         android:hint="Optional"
-        android:maxHeight="100dp"
-        android:padding="16dp"
-        android:textColor="@color/white"
-        android:textColorHint="@color/white"
         app:layout_constraintBottom_toTopOf="@id/tvText"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
