--- a/app/src/main/res/drawable/ic_bac.xml
+++ b/app/src/main/res/drawable/ic_bac.xml
@@ -6,7 +6,7 @@
     android:viewportHeight="64">
 
     <path
-        android:fillColor="#000000"
+        android:fillColor="#FFFFFF"
         android:pathData="M54 30h-39.899l15.278-14.552c0.8-0.762 0.831 -2.028 0.069
 -2.828-0.761-0.799-2.027-0.831-2.828-0.069l-17.448 16.62c-0.755 0.756 -1.172
 1.76-1.172 2.829 0 1.068 0.417 2.073 1.207 2.862l17.414 16.586c0.387 0.369 0.883
