--- a/app/src/main/res/layout/item_exercise_list.xml
+++ b/app/src/main/res/layout/item_exercise_list.xml
@@ -6,7 +6,7 @@
     android:layout_height="wrap_content"
     android:layout_margin="5dp"
     app:cardBackgroundColor="@color/white"
-    app:cardCornerRadius="20dp"
+    app:cardCornerRadius="10dp"
     app:cardElevation="4dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -25,7 +25,25 @@
             app:layout_constraintTop_toTopOf="parent"
             tools:text="Something Name" />
 
+        <ImageView
+            android:id="@+id/ivSwap"
+            android:layout_width="40dp"
+            android:layout_height="0dp"
+            android:background="@color/crimson"
+            android:src="@drawable/ic_swap"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:tint="@color/white" />
 
+        <androidx.appcompat.widget.LinearLayoutCompat
+            android:id="@+id/approachLayout"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@id/ivSwap"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/tvNameExercise_exercise_item" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
