--- a/app/src/main/res/layout/item_training_list.xml
+++ b/app/src/main/res/layout/item_training_list.xml
@@ -7,52 +7,58 @@
     android:layout_margin="5dp"
 
     app:cardBackgroundColor="@color/white"
-    app:cardCornerRadius="20dp"
+    app:cardCornerRadius="10dp"
     app:cardElevation="4dp">
+
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
+
         <TextView
             android:id="@+id/tvDate_training_item"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:padding="5dp"
+            android:textColor="@color/crimson"
+            android:textSize="16sp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            tools:text="Something Date"
-            android:textSize="16sp"
-            android:textColor="@color/black"/>
+            tools:text="Something Date" />
+
         <TextView
             android:id="@+id/tvMuscleGroups_training_item"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:padding="5dp"
+            android:textColor="@color/black"
+            android:textSize="16sp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/tvDate_training_item"
-            tools:text="Something muscle groups"
-            android:textSize="16sp"
-            android:textColor="@color/black"/>
+            tools:text="Something muscle groups" />
+
         <TextView
             android:id="@+id/tvComment_training_item"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:padding="5dp"
+            android:textColor="@color/black"
+            android:textSize="16sp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/tvMuscleGroups_training_item"
-            tools:text="Something comment"
-            android:textSize="16sp"
-            android:textColor="@color/black"/>
+            tools:text="Something comment" />
+
         <TextView
             android:id="@+id/tvWeight_training_item"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_margin="5dp"
             android:padding="5dp"
-           app:layout_constraintEnd_toEndOf="parent"
-
-            app:layout_constraintTop_toTopOf="parent"
-            tools:text="Something weight"
+            android:textColor="@color/white"
             android:textSize="16sp"
-            android:textColor="@color/black"/>
+            android:background="@drawable/background_color"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:text="Something weight" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 
