I added calendar and chips. Chips didn't work:)

--- a/app/src/main/res/layout/bottom_sheet_add_training.xml
+++ b/app/src/main/res/layout/bottom_sheet_add_training.xml
@@ -6,43 +6,38 @@
     android:layout_height="match_parent">
 
 
-    <com.github.florent37.singledateandtimepicker.SingleDateAndTimePicker
-        android:layout_width="0dp"
-        android:layout_height="200dp"
-        android:layout_marginStart="30dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginEnd="30dp"
-        android:layout_marginBottom="10dp"
-        app:flow_horizontalStyle="packed"
+<com.example.trainingdiary.support.CalendarView
+    android:id="@+id/calendar"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    app:layout_constraintBottom_toTopOf="@id/cgMuscleGroup"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintEnd_toEndOf="parent"
+    android:layout_marginEnd="10dp"
+    android:layout_marginStart="10dp"
+    app:month_text_size="20sp"
+    app:month_text_color="@color/crimson"
+    app:ivLeft_color="@color/crimson"
+    app:ivRight_color="@color/crimson"
+    app:today_background="@drawable/background_today_calendar"
+    app:selected_day_background="@drawable/background_color"
+    app:selected_day_text_color="@color/white"/>
+
+    <com.google.android.material.chip.ChipGroup
+        android:id="@+id/cgMuscleGroup"
+        app:chipSpacing="5dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         app:layout_constraintBottom_toTopOf="@id/tvText1"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-
-        app:picker_curvedMaxAngle="45"
-        app:picker_cyclic="true"
-        app:picker_dayCount="62"
-        app:picker_displayHours="false"
-        app:picker_displayMinutes="false"
-        app:picker_itemSpacing="6dp"
-        app:picker_mustBeOnFuture="false"
-        app:picker_selectedTextColor="@color/white"
-        app:picker_selectorColor="@android:color/transparent"
-        app:picker_textColor="@color/purple_500"
-        app:picker_visibleItemCount="3" />
+        app:layout_constraintStart_toStartOf="parent" />
 
     <EditText
         android:id="@+id/etComment_create_training"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_margin="16dp"
-        android:layout_marginTop="12dp"
-        android:background="@drawable/background_edit_text"
-        android:elevation="4dp"
+        style="@style/EditWeightStyle"
         android:hint="Optional"
-        android:maxHeight="100dp"
-        android:padding="16dp"
-        android:textColor="@color/black"
-        android:textColorHint="@color/black"
         app:layout_constraintBottom_toTopOf="@id/confirm_create_training"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
