--- a/app/src/main/res/layout/item_exercise_list.xml
+++ b/app/src/main/res/layout/item_exercise_list.xml
@@ -36,14 +36,16 @@
             app:layout_constraintTop_toTopOf="parent"
             app:tint="@color/white" />
 
-        <androidx.appcompat.widget.LinearLayoutCompat
-            android:id="@+id/approachLayout"
+        <com.google.android.material.chip.ChipGroup
+            android:id="@+id/approaches_chipGroup"
             android:layout_width="0dp"
             android:layout_height="0dp"
+            android:layout_margin="10dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@id/ivSwap"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/tvNameExercise_exercise_item" />
+            app:layout_constraintTop_toBottomOf="@id/tvNameExercise_exercise_item"
+            />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
