--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -61,5 +61,13 @@
 
     </style>
 
+    <style name="MyFloatingActionButton" parent="Widget.Design.FloatingActionButton">
+        <item name="android:layout_margin">24dp</item>
+        <item name="background">@android:color/transparent</item>
+        <item name="android:src">@drawable/ic_add</item>
+        <item name="backgroundTint"> @color/crimson</item>
+        <item name="tint"> @color/white</item>
+    </style>
+
 
 </resources>
