I added undo at exercise list

--- a/app/src/main/res/layout/item_exercise_list.xml
+++ b/app/src/main/res/layout/item_exercise_list.xml
@@ -36,16 +36,14 @@
             app:layout_constraintTop_toTopOf="parent"
             app:tint="@color/white" />
 
-        <com.google.android.material.chip.ChipGroup
-            android:id="@+id/approaches_chipGroup"
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/rvApproachInExerciseItem"
             android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:layout_margin="10dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toStartOf="@id/ivSwap"
+            android:layout_height="wrap_content"
             app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toStartOf="@id/ivSwap"
             app:layout_constraintTop_toBottomOf="@id/tvNameExercise_exercise_item"
-            />
+            tools:listitem="@layout/item_approach"/>
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
