I forgot what i added here:)

--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -53,10 +53,11 @@
         <item name="android:layout_margin">10dp</item>
     </style>
 
-    <style name="AddRemoveImageView" >
+    <style name="AddRemoveImageButton" >
         <item name="android:tint">@color/crimson</item>
         <item name="android:layout_margin">5dp</item>
         <item name="android:padding">2dp</item>
+        <item name="android:background"> @android:color/transparent</item>
 
 
     </style>
