--- a/app/src/main/res/layout/bottom_sheet_add_approach.xml
+++ b/app/src/main/res/layout/bottom_sheet_add_approach.xml
@@ -39,9 +39,9 @@
 
         tools:listitem="@layout/item_approach" />
 
-    <ImageView
-        android:id="@+id/ivAddWeight"
-        style="@style/AddRemoveImageView"
+    <ImageButton
+        android:id="@+id/ibAddWeight"
+        style="@style/AddRemoveImageButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:src="@drawable/ic_plus"
@@ -50,9 +50,10 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="@id/etWeight" />
 
-    <ImageView
-        android:id="@+id/ivRemoveWeight"
-        style="@style/AddRemoveImageView"
+    <ImageButton
+        android:id="@+id/ibRemoveWeight"
+        style="@style/AddRemoveImageButton"
+
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:src="@drawable/ic_minus"
@@ -65,7 +66,7 @@
         style="@style/EditWeightStyle"
         android:layout_width="70dp"
         android:layout_height="wrap_content"
-        app:layout_constraintEnd_toStartOf="@id/ivAddWeight"
+        app:layout_constraintEnd_toStartOf="@id/ibAddWeight"
         app:layout_constraintTop_toBottomOf="@id/rvApproach" />
 
     <TextView
@@ -77,9 +78,9 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@id/etWeight" />
 
-    <ImageView
-        android:id="@+id/ivAddQuantity"
-        style="@style/AddRemoveImageView"
+    <ImageButton
+        android:id="@+id/ibAddQuantity"
+        style="@style/AddRemoveImageButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:src="@drawable/ic_plus"
@@ -87,9 +88,9 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="@id/etReoccurrence" />
 
-    <ImageView
-        android:id="@+id/ivRemoveQuantity"
-        style="@style/AddRemoveImageView"
+    <ImageButton
+        android:id="@+id/ibRemoveQuantity"
+        style="@style/AddRemoveImageButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:src="@drawable/ic_minus"
