--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -34,6 +34,9 @@
         <action
             android:id="@+id/action_exerciseListFragment_to_approachCreateBottomDialog2"
             app:destination="@id/approachCreateBottomDialog2" />
+        <action
+            android:id="@+id/action_exerciseListFragment_to_trainingCreateBottomDialog"
+            app:destination="@id/trainingCreateBottomDialog" />
     </fragment>
     <dialog
         android:id="@+id/exerciseCreateBottomDialog"
