--- a/app/src/main/res/layout/item_exercise_list.xml
+++ b/app/src/main/res/layout/item_exercise_list.xml
@@ -24,6 +24,17 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             tools:text="Something Name" />
+        <TextView
+            android:id="@+id/tvCommentExercise_exercise_item"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:padding="10dp"
+            android:textColor="@color/black"
+            android:textSize="14sp"
+            android:textStyle="bold"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/tvNameExercise_exercise_item"
+            tools:text="Something Comment" />
 
         <ImageView
             android:id="@+id/ivSwap"
@@ -42,8 +53,8 @@
             android:layout_height="wrap_content"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toStartOf="@id/ivSwap"
-            app:layout_constraintTop_toBottomOf="@id/tvNameExercise_exercise_item"
-            tools:listitem="@layout/item_approach"/>
+            app:layout_constraintTop_toBottomOf="@id/tvCommentExercise_exercise_item"
+            tools:listitem="@layout/item_approach_exercise"/>
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
