--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -29,6 +29,7 @@
     <style name="EditWeightStyle" parent="EditTextStyle">
         <item name="android:maxLength">5</item>
         <item name="paddingStart">5dp</item>
+        <item name="android:gravity">center</item>
         <item name="paddingEnd">5dp</item>
         <item name="android:inputType">numberDecimal</item>
         <item name="android:imeOptions">actionDone</item>
@@ -38,6 +39,7 @@
     <style name="EditNumberStyle" parent="EditTextStyle">
         <item name="android:maxLength">5</item>
         <item name="paddingStart">5dp</item>
+        <item name="android:gravity">center</item>
         <item name="paddingEnd">5dp</item>
         <item name="android:inputType">number</item>
         <item name="android:imeOptions">actionDone</item>
