--- a/app/src/main/res/layout/bottom_sheet_add_approach.xml
+++ b/app/src/main/res/layout/bottom_sheet_add_approach.xml
@@ -35,7 +35,7 @@
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/etCommentExercise"
+        app:layout_constraintTop_toBottomOf="@id/btnEdit_exercise"
 
         tools:listitem="@layout/item_approach" />
 
@@ -119,7 +119,7 @@
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/btnAddApproach"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_margin="10dp"
         android:background="@drawable/background_color"
@@ -134,6 +134,25 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/etReoccurrence"
         tools:layout_editor_absoluteX="0dp" />
+
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/btnEdit_exercise"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="10dp"
+        android:background="@drawable/background_color"
+        android:letterSpacing="0.06"
+        android:paddingStart="10dp"
+        android:paddingEnd="10dp"
+        android:text="Edit exercise"
+        android:textAllCaps="false"
+        android:textColor="@color/white"
+        android:textSize="14dp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toTopOf="@id/rvApproach"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/etCommentExercise" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
