--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -71,6 +71,17 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/tvAutofill" />
 
+    <TextView
+        android:id="@+id/tvText4"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:padding="8dp"
+        android:text="Backup data"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/rvMuscleCroups_settings" />
+
 
     <TextView
         style="@style/MyTextView"
@@ -81,6 +92,21 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@id/etWeight" />
 
+    <TextView
+        android:id="@+id/tvAddValues"
+        style="@style/MyTextView"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:lines="3"
+        android:text="Add\n default\n values"
+        android:textColor="@color/crimson"
+        android:textSize="18sp"
+        app:layout_constraintBottom_toBottomOf="@id/etReoccurrence"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="@id/etWeight" />
+
+
     <ImageButton
         android:id="@+id/ibAddWeight"
         style="@style/AddRemoveImageButton"
@@ -88,7 +114,7 @@
         android:layout_height="wrap_content"
         android:src="@drawable/ic_plus"
         app:layout_constraintBottom_toBottomOf="@id/etWeight"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintEnd_toStartOf="@id/tvAddValues"
         app:layout_constraintTop_toTopOf="@id/etWeight" />
 
     <ImageButton
@@ -117,7 +143,7 @@
         android:layout_height="wrap_content"
         android:src="@drawable/ic_plus"
         app:layout_constraintBottom_toBottomOf="@id/etReoccurrence"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintEnd_toStartOf="@id/tvAddValues"
         app:layout_constraintTop_toTopOf="@id/etReoccurrence" />
 
     <ImageButton
@@ -152,14 +178,17 @@
         android:id="@+id/switch_sort_training"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:checked="true"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@id/tvText1" />
 
     <TextView
+        android:id="@+id/tvTrainings_layout"
         style="@style/MyTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Last training below"
+        android:layout_marginStart="8dp"
+        android:text="Last training above"
         app:layout_constraintBottom_toBottomOf="@id/switch_sort_training"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@id/switch_sort_training" />
@@ -198,6 +227,30 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@id/ivReturn_settings"
         tools:layout_editor_absoluteY="406dp" />
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rvMuscleCroups_settings"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/etMuscleGroups"
+        tools:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+        tools:listitem="@layout/item_muscle_groups"
+        tools:orientation="horizontal" />
+
+    <TextView
+        android:id="@+id/tvDate"
+        style="@style/MyTextView"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:text="Data save / restore"
+        android:textColor="@color/crimson"
+        android:textSize="18sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/tvText4" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
