--- a/app/src/main/res/layout/fragment_training_list.xml
+++ b/app/src/main/res/layout/fragment_training_list.xml
@@ -22,7 +22,8 @@
             android:layout_height="?attr/actionBarSize"
             android:layout_gravity="end"
             android:scaleType="center"
-            android:src="@drawable/ic_customer_support" />
+            android:src="@drawable/ic_settings"
+            app:tint="@color/white" />
 
         <ImageView
             android:id="@+id/calendar_training_list"
