--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -34,6 +34,7 @@
         android:gravity="center"
         android:padding="8dp"
         android:text="Default values"
+        app:layout_constraintBottom_toTopOf="@id/etWeight"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/toolbar_settings" />
@@ -45,6 +46,7 @@
         android:gravity="center"
         android:padding="8dp"
         android:text="Sorting your training sessions"
+        app:layout_constraintBottom_toTopOf="@id/switch_sort_training"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/etReoccurrence" />
@@ -56,6 +58,7 @@
         android:gravity="center"
         android:padding="8dp"
         android:text="Exercises"
+        app:layout_constraintBottom_toTopOf="@id/tvAutofill"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/switch_sort_training" />
@@ -67,6 +70,7 @@
         android:gravity="center"
         android:padding="8dp"
         android:text="Muscle groups"
+        app:layout_constraintBottom_toTopOf="@id/ivReturn_settings"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/tvAutofill" />
@@ -78,6 +82,7 @@
         android:gravity="center"
         android:padding="8dp"
         android:text="Backup data"
+        app:layout_constraintBottom_toTopOf="@id/tvDateSave"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/rvMuscleCroups_settings" />
@@ -133,6 +138,7 @@
         style="@style/EditWeightStyle"
         android:layout_width="70dp"
         android:layout_height="wrap_content"
+        app:layout_constraintBottom_toTopOf="@id/etReoccurrence"
         app:layout_constraintEnd_toStartOf="@id/ibAddWeight"
         app:layout_constraintTop_toBottomOf="@id/tvText" />
 
@@ -161,6 +167,7 @@
         style="@style/EditNumberStyle"
         android:layout_width="70dp"
         android:layout_height="wrap_content"
+        app:layout_constraintBottom_toTopOf="@id/tvText1"
         app:layout_constraintEnd_toEndOf="@id/etWeight"
         app:layout_constraintStart_toStartOf="@id/etWeight"
         app:layout_constraintTop_toBottomOf="@id/etWeight" />
@@ -179,6 +186,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:checked="true"
+        app:layout_constraintBottom_toTopOf="@id/tvText2"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@id/tvText1" />
 
@@ -202,6 +210,7 @@
         android:text="Set up exercises for autofill"
         android:textColor="@color/crimson"
         android:textSize="18sp"
+        app:layout_constraintBottom_toTopOf="@id/tvText3"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/tvText2" />
@@ -211,7 +220,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="10dp"
+        android:layout_marginTop="8dp"
         android:src="@drawable/ic_return_settings"
+        app:layout_constraintBottom_toTopOf="@id/rvMuscleCroups_settings"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@id/tvText3"
         app:tint="@color/crimson" />
@@ -232,15 +243,17 @@
         android:id="@+id/rvMuscleCroups_settings"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+        app:layout_constraintBottom_toTopOf="@id/tvText4"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/etMuscleGroups"
-        tools:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-        tools:listitem="@layout/item_muscle_groups"
-        tools:orientation="horizontal" />
+        tools:listitem="@layout/item_approach" />
 
     <TextView
-        android:id="@+id/tvDate"
+        android:id="@+id/tvDateSave"
         style="@style/MyTextView"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
@@ -248,6 +261,7 @@
         android:text="Data save / restore"
         android:textColor="@color/crimson"
         android:textSize="18sp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/tvText4" />
