--- a/app/src/main/res/layout/item_set.xml
+++ b/app/src/main/res/layout/item_set.xml
@@ -12,10 +12,10 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:elevation="3dp"
-       >
+        >
 
         <TextView
-            android:id="@+id/tvMuscleGroups"
+            android:id="@+id/tvName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="16sp"
@@ -27,7 +27,7 @@
             android:paddingStart="10dp"
             android:paddingEnd="10dp"
             app:layout_constraintTop_toTopOf="parent"
-            tools:text="Muscle groups" />
+            tools:text="Exercise #1" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
