--- a/app/src/main/res/layout/fragment_training_list.xml
+++ b/app/src/main/res/layout/fragment_training_list.xml
@@ -44,6 +44,19 @@
             android:gravity="center"
             android:layout_margin="2dp"
             android:background="@drawable/ic_circle"/>
+        <TextView
+            android:id="@+id/tvNumberDays"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="end"
+            android:scaleType="center"
+            tools:text="99"
+            android:textSize="14sp"
+            android:textColor="@color/white"
+            android:gravity="center"
+            android:layout_margin="2dp"
+            android:background="@drawable/ic_circle_from_day"/>
+
 
     </androidx.appcompat.widget.Toolbar>
 
