--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -124,12 +124,24 @@
         android:id="@+id/seasonTicketBottomDialog"
         android:name="com.example.trainingdiary.screen.season_ticket.SeasonTicketBottomDialog"
         android:label="SeasonTicketBottomDialog"
-        tools:layout="@layout/bottom_sheet_season_ticket"/>
+        tools:layout="@layout/bottom_sheet_season_ticket">
+        <action
+            android:id="@+id/action_seasonTicketBottomDialog_to_trainingListFragment"
+            app:destination="@id/trainingListFragment"
+            app:popUpTo="@id/nav_graph"
+            app:popUpToInclusive="true"/>
+    </dialog>
     <dialog
         android:id="@+id/seasonTicketInfoBottomDialog"
         android:name="com.example.trainingdiary.screen.season_ticket_info.SeasonTicketInfoBottomDialog"
         android:label="SeasonTicketInfoBottomDialog"
-        tools:layout="@layout/bottom_sheet_season_ticket_information"/>
+        tools:layout="@layout/bottom_sheet_season_ticket_information">
+        <action
+            android:id="@+id/action_seasonTicketInfoBottomDialog_to_trainingListFragment"
+            app:destination="@id/trainingListFragment"
+            app:popUpTo="@id/nav_graph"
+            app:popUpToInclusive="true"/>
+    </dialog>
     <dialog
         android:id="@+id/superSetCreateBottomDialog"
         android:name="com.example.trainingdiary.screen.super_set_create.SuperSetCreateBottomDialog"
