--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -23,6 +23,7 @@
             android:layout_width="?attr/actionBarSize"
             android:layout_height="?attr/actionBarSize"
             android:layout_gravity="end"
+            android:contentDescription="@string/information"
             android:scaleType="center"
             android:src="@drawable/ic_information" />
     </androidx.appcompat.widget.Toolbar>
@@ -33,7 +34,7 @@
         android:layout_height="wrap_content"
         android:gravity="center"
         android:padding="8dp"
-        android:text="Default values"
+        android:text="@string/default_values"
         app:layout_constraintBottom_toTopOf="@id/etWeight"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -45,7 +46,7 @@
         android:layout_height="wrap_content"
         android:gravity="center"
         android:padding="8dp"
-        android:text="Sorting your training sessions"
+        android:text="@string/sorting_your_training_sessions"
         app:layout_constraintBottom_toTopOf="@id/switch_sort_training"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -57,7 +58,7 @@
         android:layout_height="wrap_content"
         android:gravity="center"
         android:padding="8dp"
-        android:text="Exercises"
+        android:text="@string/exercises"
         app:layout_constraintBottom_toTopOf="@id/tvAutofill"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -69,7 +70,7 @@
         android:layout_height="wrap_content"
         android:gravity="center"
         android:padding="8dp"
-        android:text="Muscle groups"
+        android:text="@string/muscle_groups"
         app:layout_constraintBottom_toTopOf="@id/ivReturn_settings"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -81,7 +82,7 @@
         android:layout_height="wrap_content"
         android:gravity="center"
         android:padding="8dp"
-        android:text="Backup data"
+        android:text="@string/backup_data"
         app:layout_constraintBottom_toTopOf="@id/tvDateSave"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -92,7 +93,7 @@
         style="@style/MyTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Weight, kg"
+        android:text="@string/weight_kg"
         app:layout_constraintBottom_toBottomOf="@id/etWeight"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@id/etWeight" />
@@ -104,7 +105,7 @@
         android:layout_height="wrap_content"
         android:gravity="center"
         android:lines="3"
-        android:text="Add\n default\n values"
+        android:text="@string/add_n_default_n_values"
         android:textColor="@color/crimson"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="@id/etReoccurrence"
@@ -117,6 +118,7 @@
         style="@style/AddRemoveImageButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:contentDescription="@string/add_weight"
         android:src="@drawable/ic_plus"
         app:layout_constraintBottom_toBottomOf="@id/etWeight"
         app:layout_constraintEnd_toStartOf="@id/tvAddValues"
@@ -125,9 +127,9 @@
     <ImageButton
         android:id="@+id/ibRemoveWeight"
         style="@style/AddRemoveImageButton"
-
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:contentDescription="@string/remove_weight"
         android:src="@drawable/ic_minus"
         app:layout_constraintBottom_toBottomOf="@id/etWeight"
         app:layout_constraintEnd_toStartOf="@+id/etWeight"
@@ -138,15 +140,18 @@
         style="@style/EditWeightStyle"
         android:layout_width="70dp"
         android:layout_height="wrap_content"
+        android:importantForAutofill="no"
         app:layout_constraintBottom_toTopOf="@id/etReoccurrence"
         app:layout_constraintEnd_toStartOf="@id/ibAddWeight"
-        app:layout_constraintTop_toBottomOf="@id/tvText" />
+        app:layout_constraintTop_toBottomOf="@id/tvText"
+        tools:ignore="LabelFor" />
 
     <ImageButton
         android:id="@+id/ibAddQuantity"
         style="@style/AddRemoveImageButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:contentDescription="@string/add_quantity"
         android:src="@drawable/ic_plus"
         app:layout_constraintBottom_toBottomOf="@id/etReoccurrence"
         app:layout_constraintEnd_toStartOf="@id/tvAddValues"
@@ -157,6 +162,7 @@
         style="@style/AddRemoveImageButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:contentDescription="@string/remove_quantity"
         android:src="@drawable/ic_minus"
         app:layout_constraintBottom_toBottomOf="@id/etReoccurrence"
         app:layout_constraintEnd_toStartOf="@+id/etReoccurrence"
@@ -167,16 +173,18 @@
         style="@style/EditNumberStyle"
         android:layout_width="70dp"
         android:layout_height="wrap_content"
+        android:importantForAutofill="no"
         app:layout_constraintBottom_toTopOf="@id/tvText1"
         app:layout_constraintEnd_toEndOf="@id/etWeight"
         app:layout_constraintStart_toStartOf="@id/etWeight"
-        app:layout_constraintTop_toBottomOf="@id/etWeight" />
+        app:layout_constraintTop_toBottomOf="@id/etWeight"
+        tools:ignore="LabelFor" />
 
     <TextView
         style="@style/MyTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Reoccurrences"
+        android:text="@string/reoccurrences"
         app:layout_constraintBottom_toBottomOf="@id/etReoccurrence"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@id/etReoccurrence" />
@@ -196,7 +204,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
-        android:text="Last training above"
+        android:text="@string/Last_training_above"
         app:layout_constraintBottom_toBottomOf="@id/switch_sort_training"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@id/switch_sort_training" />
@@ -207,7 +215,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:gravity="center"
-        android:text="Set up exercises for autofill"
+        android:text="@string/set_up_exercises_for_autofill"
         android:textColor="@color/crimson"
         android:textSize="18sp"
         app:layout_constraintBottom_toTopOf="@id/tvText3"
@@ -221,6 +229,7 @@
         android:layout_height="wrap_content"
         android:layout_margin="10dp"
         android:layout_marginTop="8dp"
+        android:contentDescription="@string/return_settings"
         android:src="@drawable/ic_return_settings"
         app:layout_constraintBottom_toTopOf="@id/rvMuscleCroups_settings"
         app:layout_constraintEnd_toEndOf="parent"
@@ -232,7 +241,8 @@
         style="@style/EditTextStyle"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:hint="Add muscle groups"
+        android:hint="@string/add_muscle_groups"
+        android:importantForAutofill="no"
         app:layout_constraintBottom_toBottomOf="@id/ivReturn_settings"
         app:layout_constraintEnd_toStartOf="@id/ivReturn_settings"
         app:layout_constraintStart_toStartOf="parent"
@@ -258,7 +268,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:gravity="center"
-        android:text="Data save / restore"
+        android:text="@string/data_save_restore"
         android:textColor="@color/crimson"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
