--- a/app/src/main/res/drawable/background_toolbar_color.xml
+++ b/app/src/main/res/drawable/background_toolbar_color.xml
@@ -1,9 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <gradient android:angle="270"
-        android:startColor="#FD1E7E"
-        android:endColor="#FC466B"/>
+    <gradient
+        android:angle="270"
+        android:endColor="#FC466B"
+        android:startColor="#FD1E7E" />
     <corners
-        android:radius="5dp"/>
-
+        android:bottomLeftRadius="20dp"
+        android:bottomRightRadius="20dp"
+        android:topLeftRadius="0dp"
+        android:topRightRadius="0dp" />
 </shape>
