--- a/app/src/main/res/drawable/button_background1.xml
+++ b/app/src/main/res/drawable/button_background1.xml
@@ -2,16 +2,20 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:state_pressed="true">
         <shape android:shape="rectangle">
-            <stroke android:width="1dp" android:color="@color/white" />
-            <corners android:bottomLeftRadius="10dp" android:bottomRightRadius="10dp" android:topLeftRadius="10dp" android:topRightRadius="10dp" />
-            <solid android:color="@color/purple_200" />
+            <gradient android:angle="180"
+                android:startColor="#6C0833"
+                android:endColor="#A10626"/>
+            <corners
+                android:radius="5dp" />
         </shape>
     </item>
     <item android:state_pressed="false">
         <shape android:shape="rectangle">
-            <stroke android:width="2dp" android:color="@color/black" />
-            <corners android:bottomLeftRadius="10dp" android:bottomRightRadius="10dp" android:topLeftRadius="10dp" android:topRightRadius="10dp" />
-            <solid android:color="#99141414" />
+            <gradient android:angle="180"
+                android:startColor="#FD1E7E"
+                android:endColor="#FC466B"/>
+            <corners
+                android:radius="5dp"  />
         </shape>
     </item>
 </selector>
