--- a/app/src/main/res/layout/bottom_sheet_add_exercise.xml
+++ b/app/src/main/res/layout/bottom_sheet_add_exercise.xml
@@ -9,17 +9,19 @@
         android:id="@+id/tvText1"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/autoCompleteTvExerciseName"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/autoCompleteTvExerciseName"/>
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <AutoCompleteTextView
         android:id="@+id/autoCompleteTvExerciseName"
         style="@style/EditTextStyle"
+
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:dropDownAnchor="@id/tvText1"
-        android:hint="Names exercise"
+        android:hint="@string/names_exercise"
         android:maxLength="30"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -30,7 +32,8 @@
         style="@style/EditTextStyle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Comment"
+        android:hint="@string/comment"
+        android:importantForAutofill="no"
         app:layout_constraintEnd_toEndOf="@id/autoCompleteTvExerciseName"
         app:layout_constraintStart_toStartOf="@id/autoCompleteTvExerciseName"
         app:layout_constraintTop_toBottomOf="@id/autoCompleteTvExerciseName" />
@@ -38,16 +41,10 @@
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/btnSave"
+        style="@style/MyButton"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_margin="10dp"
-        android:background="@drawable/background_color"
-        android:letterSpacing="0.06"
-        android:text="Save"
-        android:textAllCaps="false"
-        android:textColor="@color/white"
-        android:textSize="16dp"
-        android:textStyle="bold"
+        android:text="@string/save"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@id/btnAddToSet"
@@ -56,21 +53,15 @@
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/btnAddToSet"
+        style="@style/MyButton"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_margin="10dp"
-        android:background="@drawable/background_color"
-        android:letterSpacing="0.06"
-        android:text="Add to set"
-        android:textAllCaps="false"
-        android:textColor="@color/white"
-        android:textSize="16dp"
-        android:textStyle="bold"
+        android:text="@string/add_to_set"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@id/btnSave"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/etCommentExercise"
-        tools:layout_editor_absoluteX="0dp" />
+        app:layout_constraintTop_toBottomOf="@id/etCommentExercise" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
