--- a/app/src/main/res/layout/bottom_sheet_add_set.xml
+++ b/app/src/main/res/layout/bottom_sheet_add_set.xml
@@ -20,7 +20,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:dropDownAnchor="@id/tvText1"
-        android:hint="Names exercise"
+        android:hint="@string/names_exercise"
         android:maxLength="30"
         app:layout_constraintBottom_toTopOf="@id/etCommentExercise"
         app:layout_constraintEnd_toEndOf="parent"
@@ -32,8 +32,9 @@
         style="@style/EditTextStyle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Comment"
-        app:layout_constraintBottom_toTopOf="@id/rvMuscleCroups"
+        android:hint="@string/comment"
+        android:importantForAutofill="no"
+        app:layout_constraintBottom_toTopOf="@id/rvExerciseInSuperSet"
         app:layout_constraintEnd_toEndOf="@id/autoCompleteTvExerciseName"
         app:layout_constraintStart_toStartOf="@id/autoCompleteTvExerciseName"
         app:layout_constraintTop_toBottomOf="@id/autoCompleteTvExerciseName" />
@@ -41,70 +42,52 @@
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/btnSave"
+        style="@style/MyButton"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_margin="10dp"
-        android:background="@drawable/background_color"
-        android:letterSpacing="0.06"
-        android:text="Save"
-        android:textAllCaps="false"
-        android:textColor="@color/white"
-        android:textSize="16dp"
-        android:textStyle="bold"
+        android:text="@string/save"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/etCommentExercise"
-        tools:layout_editor_absoluteX="0dp" />
+        app:layout_constraintTop_toBottomOf="@id/etCommentExercise" />
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/btnAddToSet"
+        style="@style/MyButton"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_margin="10dp"
-        android:background="@drawable/background_color"
-        android:letterSpacing="0.06"
-        android:text="Add to set"
-        android:textAllCaps="false"
-        android:textColor="@color/white"
-        android:textSize="16dp"
-        android:textStyle="bold"
+        android:text="@string/add_to_set"
         app:layout_constraintBottom_toTopOf="@id/btnSave"
         app:layout_constraintEnd_toStartOf="@id/btnDeleteFromSet"
-        app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteX="0dp" />
+        app:layout_constraintStart_toStartOf="parent" />
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/btnDeleteFromSet"
+        style="@style/MyButton"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_margin="10dp"
-        android:background="@drawable/background_color"
-        android:letterSpacing="0.06"
-        android:text="Delete from Set"
-        android:textAllCaps="false"
+        android:text="@string/delete_from_set"
         android:visibility="gone"
-        android:textColor="@color/white"
-        android:textSize="16dp"
-        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintBottom_toTopOf="@id/btnSave"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@id/btnAddToSet"
-        tools:layout_editor_absoluteX="0dp" />
+        app:layout_constraintStart_toEndOf="@id/btnAddToSet" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rvExerciseInSuperSet"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="70dp"
         android:clipToPadding="false"
         android:orientation="horizontal"
-        android:layout_marginBottom="70dp"
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         app:layout_constraintBottom_toTopOf="@id/btnSave"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/etCommentExercise"
-        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         tools:listitem="@layout/item_set" />
 
 
