--- a/app/src/main/res/layout/bottom_sheet_add_training.xml
+++ b/app/src/main/res/layout/bottom_sheet_add_training.xml
@@ -40,7 +40,8 @@
         style="@style/EditTextStyle"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:hint="Optional"
+        android:hint="@string/optional"
+        android:importantForAutofill="no"
         android:inputType="textAutoCorrect"
         app:layout_constraintBottom_toTopOf="@id/confirm_create_training"
         app:layout_constraintEnd_toEndOf="parent"
@@ -51,7 +52,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="4dp"
-        android:text="Comment"
+        android:text="@string/comment"
         app:layout_constraintBottom_toTopOf="@id/etComment_create_training"
         app:layout_constraintStart_toStartOf="@id/etComment_create_training" />
 
@@ -60,7 +61,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="4dp"
-        android:text="Your weight, kg"
+        android:text="@string/your_weight_kg"
         app:layout_constraintBottom_toTopOf="@id/etWeight_create_training"
         app:layout_constraintStart_toStartOf="@id/etWeight_create_training" />
 
@@ -69,20 +70,19 @@
         style="@style/EditWeightStyle"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:hint="Optional"
         android:gravity="start"
+        android:hint="@string/optional"
+        android:importantForAutofill="no"
         app:layout_constraintBottom_toTopOf="@id/tvText"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/confirm_create_training"
+        style="@style/MyButton"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_margin="12dp"
-        android:background="@drawable/background_color"
-        android:paddingVertical="12dp"
-        android:text="Confirm"
+        android:text="@string/save"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
