--- a/app/src/main/res/layout/bottom_sheet_season_ticket.xml
+++ b/app/src/main/res/layout/bottom_sheet_season_ticket.xml
@@ -8,12 +8,9 @@
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/btnSave_season_ticket"
         android:layout_width="0dp"
+        style="@style/MyButton"
         android:layout_height="wrap_content"
-        android:layout_margin="12dp"
-        android:background="@drawable/background_color"
-        android:paddingVertical="12dp"
-        android:text="Save"
-        android:textColor="@color/white"
+        android:text="@string/save"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
@@ -22,12 +19,12 @@
         android:id="@+id/ctvPerpetual"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_margin="10dp"
         android:checkMark="?android:attr/listChoiceIndicatorMultiple"
         android:checked="false"
         android:gravity="center"
+        android:text="@string/perpetual"
         android:textColor="@color/black"
-        android:layout_margin="10dp"
-        android:text="Perpetual"
         app:layout_constraintBottom_toTopOf="@id/btnSave_season_ticket"
         app:layout_constraintEnd_toStartOf="@id/ctvUnlimited"
         app:layout_constraintStart_toStartOf="parent" />
@@ -36,12 +33,12 @@
         android:id="@+id/ctvUnlimited"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_margin="10dp"
         android:checkMark="?android:attr/listChoiceIndicatorMultiple"
         android:checked="false"
-        android:textColor="@color/black"
         android:gravity="center"
-        android:layout_margin="10dp"
-        android:text="Unlimited"
+        android:text="@string/unlimited"
+        android:textColor="@color/black"
         app:layout_constraintBottom_toTopOf="@id/btnSave_season_ticket"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@id/ctvPerpetual" />
@@ -54,7 +51,8 @@
         android:src="@drawable/ic_plus"
         app:layout_constraintBottom_toBottomOf="@id/etReoccurrence"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@id/etReoccurrence" />
+        app:layout_constraintTop_toTopOf="@id/etReoccurrence"
+        android:contentDescription="@string/add_quantity" />
 
     <ImageButton
         android:id="@+id/ibRemoveQuantity"
@@ -64,22 +62,25 @@
         android:src="@drawable/ic_minus"
         app:layout_constraintBottom_toBottomOf="@id/etReoccurrence"
         app:layout_constraintEnd_toStartOf="@+id/etReoccurrence"
-        app:layout_constraintTop_toTopOf="@id/etReoccurrence" />
+        app:layout_constraintTop_toTopOf="@id/etReoccurrence"
+        android:contentDescription="@string/remove_quantity" />
 
     <EditText
         android:id="@+id/etReoccurrence"
         style="@style/EditNumberStyle"
-        android:maxLength="2"
         android:layout_width="70dp"
         android:layout_height="wrap_content"
+        android:maxLength="2"
         app:layout_constraintBottom_toTopOf="@id/ctvPerpetual"
-        app:layout_constraintEnd_toStartOf="@id/ibAddQuantity" />
+        app:layout_constraintEnd_toStartOf="@id/ibAddQuantity"
+        android:importantForAutofill="no"
+        tools:ignore="LabelFor" />
 
     <TextView
         style="@style/MyTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Number of training sessions"
+        android:text="@string/number_of_training_sessions"
         app:layout_constraintBottom_toBottomOf="@id/etReoccurrence"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@id/etReoccurrence" />
@@ -106,19 +107,22 @@
 
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginStart="10dp"
+        android:layout_marginEnd="10dp"
         android:gravity="center"
-        android:text="Valid until"
+        android:text="@string/valid_until"
         app:layout_constraintBottom_toTopOf="@id/calendar"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
+
     <TextView
         android:id="@+id/tvText1"
         style="@style/MyTextView"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:gravity="center"
+        android:text="@string/season_ticket"
         android:textColor="@color/crimson"
-        android:text="Season ticket"
         android:textSize="22sp"
         app:layout_constraintBottom_toTopOf="@id/tvText"
         app:layout_constraintEnd_toEndOf="parent"
