--- a/app/src/main/res/layout/bottom_sheet_season_ticket_information.xml
+++ b/app/src/main/res/layout/bottom_sheet_season_ticket_information.xml
@@ -7,26 +7,20 @@
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/btnReset"
+        style="@style/MyButton"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_margin="12dp"
-        android:background="@drawable/background_color"
-        android:paddingVertical="12dp"
-        android:text="Reset"
-        android:textColor="@color/white"
+        android:text="@string/reset"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@id/btnClose"
         app:layout_constraintStart_toStartOf="parent" />
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/btnClose"
+        style="@style/MyButton"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_margin="12dp"
-        android:background="@drawable/background_color"
-        android:paddingVertical="12dp"
-        android:text="Close"
-        android:textColor="@color/white"
+        android:text="@string/close"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@id/btnReset" />
@@ -36,24 +30,26 @@
         style="@style/MyTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Remained trainings"
+        android:text="@string/remained_trainings"
         app:layout_constraintBottom_toBottomOf="@id/tvTrainings_amount"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@id/tvTrainings_amount" />
 
     <TextView
         android:id="@+id/tvTrainings_amount"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
-        android:layout_marginEnd="40dp"
+
         android:layout_marginBottom="10dp"
         android:background="@drawable/background_color"
+        android:gravity="center"
         android:padding="4dp"
         android:textColor="@color/white"
         android:textSize="16sp"
         app:layout_constraintBottom_toTopOf="@id/btnClose"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintEnd_toEndOf="@id/tvDate_valid"
+        app:layout_constraintStart_toStartOf="@id/tvDate_valid"
         tools:text="1" />
 
     <TextView
@@ -61,24 +57,26 @@
         style="@style/MyTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Remained days"
+        android:text="@string/remained_days"
         app:layout_constraintBottom_toBottomOf="@id/tvDays_amount"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@id/tvDays_amount" />
 
     <TextView
         android:id="@+id/tvDays_amount"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
-        android:layout_marginEnd="40dp"
         android:layout_marginBottom="10dp"
         android:background="@drawable/background_color"
+        android:gravity="center"
         android:padding="4dp"
         android:textColor="@color/white"
         android:textSize="16sp"
         app:layout_constraintBottom_toTopOf="@id/tvTrainings_amount"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintEnd_toEndOf="@id/tvDate_valid"
+        app:layout_constraintStart_toStartOf="@id/tvDate_valid"
+
         tools:text="1" />
 
     <TextView
@@ -86,7 +84,7 @@
         style="@style/MyTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="is valid until"
+        android:text="@string/is_valid_until"
         app:layout_constraintBottom_toBottomOf="@id/tvDate_valid"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@id/tvDate_valid" />
@@ -102,20 +100,19 @@
         android:textSize="16sp"
         app:layout_constraintBottom_toTopOf="@id/tvDays_amount"
         app:layout_constraintEnd_toEndOf="parent"
-
         tools:text="Thu 17.06.2021" />
 
     <TextView
-        android:textSize="26sp"
-        android:textColor="@color/crimson"
-        android:textStyle="bold"
-        android:gravity="center"
-        android:layout_margin="14dp"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="Season ticket"
+        android:layout_margin="14dp"
+        android:gravity="center"
+        android:text="@string/season_ticket"
+        android:textColor="@color/crimson"
+        android:textSize="26sp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@id/tvText2"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
