--- a/app/src/main/res/layout/calendar_view.xml
+++ b/app/src/main/res/layout/calendar_view.xml
@@ -27,7 +27,7 @@
         app:layout_constraintDimensionRatio="1:1"
         app:layout_constraintStart_toStartOf="@id/tvMonths"
         app:layout_constraintTop_toTopOf="@id/tvMonths"
-         />
+        tools:ignore="ContentDescription" />
 
     <ImageView
         android:id="@+id/ivRight"
@@ -38,7 +38,7 @@
         app:layout_constraintDimensionRatio="1:1"
         app:layout_constraintEnd_toEndOf="@id/tvMonths"
         app:layout_constraintTop_toTopOf="@id/tvMonths"
-         />
+        tools:ignore="ContentDescription" />
 
 
     <androidx.recyclerview.widget.RecyclerView
