--- a/app/src/main/res/layout/fragment_exercise_list.xml
+++ b/app/src/main/res/layout/fragment_exercise_list.xml
@@ -54,6 +54,7 @@
                 android:textStyle="normal"
                 app:layout_constraintStart_toEndOf="@id/weight_exercise_list"
                 app:layout_constraintTop_toBottomOf="@id/date_training_exercise_list"
+                tools:ignore="RtlSymmetry"
                 tools:text="Something muscle group" />
 
             <TextView
@@ -76,6 +77,7 @@
             android:layout_width="?attr/actionBarSize"
             android:layout_height="?attr/actionBarSize"
             android:layout_gravity="end"
+            android:contentDescription="@string/edit_training"
             android:scaleType="center"
             android:src="@drawable/ic_pencil_edit" />
 
@@ -101,7 +103,7 @@
         style="@style/MyFloatingActionButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:contentDescription="Add trainings"
+        android:contentDescription="@string/add_trainings"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
