--- a/app/src/main/res/layout/fragment_training_list.xml
+++ b/app/src/main/res/layout/fragment_training_list.xml
@@ -21,6 +21,7 @@
             android:layout_width="?attr/actionBarSize"
             android:layout_height="?attr/actionBarSize"
             android:layout_gravity="end"
+            android:contentDescription="@string/settings"
             android:scaleType="center"
             android:src="@drawable/ic_settings"
             app:tint="@color/white" />
@@ -30,34 +31,35 @@
             android:layout_width="?attr/actionBarSize"
             android:layout_height="?attr/actionBarSize"
             android:layout_gravity="end"
+            android:contentDescription="@string/subscription_training_list"
             android:scaleType="center"
-            android:src="@drawable/ic_season_ticket"/>
+            android:src="@drawable/ic_season_ticket" />
+
         <TextView
             android:id="@+id/tvNumberTraining"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="end"
-            android:scaleType="center"
-            tools:text="99"
-            android:textSize="14sp"
-            android:textColor="@color/white"
-            android:gravity="center"
             android:layout_margin="2dp"
-            android:background="@drawable/ic_circle"/>
+            android:background="@drawable/ic_circle"
+            android:gravity="center"
+            android:scaleType="center"
+            android:textColor="@color/white"
+            android:textSize="14sp"
+            tools:text="99" />
+
         <TextView
             android:id="@+id/tvNumberDays"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="end"
-            android:scaleType="center"
-            tools:text="99"
-            android:textSize="14sp"
-            android:textColor="@color/white"
-            android:gravity="center"
             android:layout_margin="2dp"
-            android:background="@drawable/ic_circle_from_day"/>
-
-
+            android:background="@drawable/ic_circle_from_day"
+            android:gravity="center"
+            android:scaleType="center"
+            android:textColor="@color/white"
+            android:textSize="14sp"
+            tools:text="99" />
     </androidx.appcompat.widget.Toolbar>
 
     <androidx.recyclerview.widget.RecyclerView
@@ -78,7 +80,7 @@
         style="@style/MyFloatingActionButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:contentDescription="Add trainings"
+        android:contentDescription="@string/add_trainings"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
