--- a/app/src/main/res/layout/item_approach.xml
+++ b/app/src/main/res/layout/item_approach.xml
@@ -24,9 +24,9 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             android:paddingEnd="10dp"
-
             app:layout_constraintTop_toTopOf="parent"
-            tools:text="31.1 kg x 10" />
+            tools:text="31.1 kg x 10"
+            tools:ignore="RtlSymmetry" />
 
         <ImageView
             android:layout_width="wrap_content"
@@ -40,7 +40,8 @@
             app:layout_constraintEnd_toStartOf="@id/tvApproach"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:tint="@color/white" />
+            app:tint="@color/white"
+            android:contentDescription="@string/remove" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
