--- a/app/src/main/res/layout/item_approach_exercise.xml
+++ b/app/src/main/res/layout/item_approach_exercise.xml
@@ -26,7 +26,7 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             android:paddingEnd="10dp"
-
+            android:paddingStart="10dp"
             app:layout_constraintTop_toTopOf="parent"
             tools:text="31.1 kg x 10" />
 
