--- a/app/src/main/res/layout/item_exercise_list.xml
+++ b/app/src/main/res/layout/item_exercise_list.xml
@@ -24,6 +24,7 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             tools:text="Something Name" />
+
         <TextView
             android:id="@+id/tvCommentExercise_exercise_item"
             android:layout_width="wrap_content"
@@ -41,6 +42,7 @@
             android:layout_width="40dp"
             android:layout_height="0dp"
             android:background="@color/crimson"
+            android:contentDescription="@string/swap"
             android:src="@drawable/ic_swap"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -51,10 +53,10 @@
             android:id="@+id/rvApproachInExerciseItem"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toStartOf="@id/ivSwap"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/tvCommentExercise_exercise_item"
-            tools:listitem="@layout/item_approach_exercise"/>
+            tools:listitem="@layout/item_approach_exercise" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
