--- a/app/src/main/res/layout/item_select_dialog.xml
+++ b/app/src/main/res/layout/item_select_dialog.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <TextView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:background="@drawable/backgroung_item_select_dialog"
     android:id="@+id/tvName_exercise"
     android:layout_width="match_parent"
     android:layout_height="40dp"
@@ -10,6 +10,6 @@
     android:gravity="center_vertical"
     android:paddingStart="15dp"
     android:paddingEnd="15dp"
-    tools:text="gismo">
+    tools:text="exercise">
 
 </TextView>
