--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -36,6 +36,7 @@
 
 
     </style>
+
     <style name="EditNumberStyle" parent="EditTextStyle">
         <item name="android:maxLength">5</item>
         <item name="paddingStart">5dp</item>
@@ -55,11 +56,11 @@
         <item name="android:layout_margin">10dp</item>
     </style>
 
-    <style name="AddRemoveImageButton" >
+    <style name="AddRemoveImageButton">
         <item name="android:tint">@color/crimson</item>
-        <item name="android:layout_margin">5dp</item>
+        <item name="android:layout_margin">10dp</item>
         <item name="android:padding">2dp</item>
-        <item name="android:background"> @android:color/transparent</item>
+        <item name="android:background">@android:color/transparent</item>
 
 
     </style>
@@ -68,8 +69,19 @@
         <item name="android:layout_margin">24dp</item>
         <item name="background">@android:color/transparent</item>
         <item name="android:src">@drawable/ic_add</item>
-        <item name="backgroundTint"> @color/crimson</item>
-        <item name="tint"> @color/white</item>
+        <item name="backgroundTint">@color/crimson</item>
+        <item name="tint">@color/white</item>
+    </style>
+
+    <style name="MyButton" parent="Widget.AppCompat.Button">
+        <item name="android:layout_margin">10dp</item>
+        <item name="android:background">@drawable/button_background1</item>
+        <item name="android:textAllCaps">false</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="android:textSize">16sp</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:letterSpacing">0.06</item>
+
     </style>
 
 
